--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,14 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #ccc;
+  opacity: 0.99;
+  background-size: 10px 10px;
+  background-image: repeating-linear-gradient(
+    45deg,
+    #444cf7 0,
+    #444cf7 1px,
+    #ccc 0,
+    #ccc 50%
+  );
 }
